tests/fail/d004_branch_mismatch.dew
# D004: branch mismatch — affine consumed in then but not else
def main = fn () {
    def b = box(42);
    if true { unbox(b) } else { 0 }
}
